--- a/api-reference/core-testing-apis/assertions.mdx
+++ b/api-reference/core-testing-apis/assertions.mdx
@@ -1,371 +1,249 @@
 ---
-title: "Assertions"
-description: "Complete reference for all assertion macros provided by GoogleTest. Details the usage, expected parameters, and behavioral differences between fatal (ASSERT_*) and non-fatal (EXPECT_*) assertion macros, empowering users to effectively verify diverse test conditions."
+title: "Assertions and Expectations"
+description: "Comprehensive guide to built-in assertions (ASSERT_*, EXPECT_*) in GoogleTest, including success/failure semantics, custom failure messages, and rich diagnostics via AssertionResult. Covers fatal and non-fatal assertions as well as advanced scenarios like predicate assertions."
 ---
 
-# Assertions Reference
+# Assertions and Expectations
 
-This page provides a comprehensive reference for all assertion macros provided by GoogleTest. These macros empower you to verify diverse test conditions effectively by checking boolean conditions, comparing values, validating exceptions, and more. Assertion macros come in pairs: `ASSERT_*` macros generate fatal failures (aborting the current function), while `EXPECT_*` macros generate nonfatal failures (allowing the function to continue). This distinction lets you control test flow based on assertion criticality.
+GoogleTest offers a comprehensive set of assertion macros to verify the correctness of your C++ code during testing. These assertions form the backbone of your test validations and report detailed diagnostics when tests fail.
 
-All assertion macros support streaming custom failure messages using the `<<` operator. Any value streamable to `ostream` can be used, including wide strings which GoogleTest converts to UTF-8 for output.
+## Understanding Assertion Semantics
 
----
+GoogleTest assertions come primarily in pairs: `EXPECT_` and `ASSERT_` variants. Both verify a particular condition but differ in how they affect test execution:
 
-## 1. Explicit Success and Failure
+- **`EXPECT_` assertions** generate **nonfatal failures** upon failure, allowing the current test function to continue executing. These are useful when you want to check multiple conditions even if one fails.
 
-Sometimes, your test logic requires signaling success or failure without testing a specific value.
+- **`ASSERT_` assertions** generate **fatal failures** on failure, immediately aborting the current function. Use these when it makes no sense to proceed if the condition is not met.
 
-### SUCCEED
-
-- **Usage**: `SUCCEED()`
-- **Purpose**: Generates a success explicitly. Does not guarantee overall test success but documents intent.
-- **Example**:
-
-  ```cpp
-  SUCCEED() << "Explicit success message.";
-  ```
-
-### FAIL
-
-- **Usage**: `FAIL()`
-- **Purpose**: Generates a fatal failure immediately aborting the current function. Use in void-returning functions.
-- **Example**:
-
-  ```cpp
-  if (unexpected_condition) {
-    FAIL() << "Unexpected failure happened.";
-  }
-  ```
-
-### ADD_FAILURE
-
-- **Usage**: `ADD_FAILURE()`
-- **Purpose**: Generates a nonfatal failure allowing the current function to continue.
-- **Example**:
-
-  ```cpp
-  ADD_FAILURE() << "Minor failure, but continuing tests.";
-  ```
-
-### ADD_FAILURE_AT
-
-- **Usage**: `ADD_FAILURE_AT(file_path, line_number)`
-- **Purpose**: Generates a nonfatal failure at the specified source file location.
-- **Example**:
-
-  ```cpp
-  ADD_FAILURE_AT("myfile.cc", 123) << "Problem here.";
-  ```
-
----
-
-## 2. Generalized Assertion
-
-### EXPECT_THAT / ASSERT_THAT
-
-- **Usage**: 
-  ```cpp
-  EXPECT_THAT(value, matcher);
-  ASSERT_THAT(value, matcher);
-  ```
-- **Purpose**: Uses gMock matchers for expressive verification (e.g., matching substrings, ranges, regex).
-- **Example**:
-
-  ```cpp
-  using ::testing::StartsWith;
-  EXPECT_THAT(my_string, StartsWith("Hello"));
-  ASSERT_THAT(number, ::testing::AllOf(::testing::Gt(5), ::testing::Lt(10)));
-  ```
-
-- **Value**: Provides readable assertions with detailed failure messaging.
-
----
-
-## 3. Boolean Condition Assertions
-
-### EXPECT_TRUE / ASSERT_TRUE
-
-- **Checks**: Conditions evaluate to `true`.
-- **Example**:
-  ```cpp
-  EXPECT_TRUE(is_valid);
-  ASSERT_TRUE(IsReady());
-  ```
-
-### EXPECT_FALSE / ASSERT_FALSE
-
-- **Checks**: Conditions evaluate to `false`.
-- **Example**:
-  ```cpp
-  EXPECT_FALSE(has_errors);
-  ASSERT_FALSE(IsEmpty());
-  ```
-
----
-
-## 4. Binary Comparisons
-
-These macros compare two values using relational operators. Arguments must be comparable and are evaluated exactly once.
-
-| Macro           | Purpose                                           |
-|-----------------|---------------------------------------------------|
-| `EXPECT_EQ`     | Verify `val1 == val2`                            |
-| `ASSERT_EQ`     | Same as `EXPECT_EQ`, but fatal failure          |
-| `EXPECT_NE`     | Verify `val1 != val2`                            |
-| `ASSERT_NE`     | Fatal version of `EXPECT_NE`                     |
-| `EXPECT_LT`     | Verify `val1 < val2`                             |
-| `ASSERT_LT`     | Fatal version of `EXPECT_LT`                     |
-| `EXPECT_LE`     | Verify `val1 <= val2`                            |
-| `ASSERT_LE`     | Fatal version of `EXPECT_LE`                     |
-| `EXPECT_GT`     | Verify `val1 > val2`                             |
-| `ASSERT_GT`     | Fatal version of `EXPECT_GT`                     |
-| `EXPECT_GE`     | Verify `val1 >= val2`                            |
-| `ASSERT_GE`     | Fatal version of `EXPECT_GE`                     |
-
-**Important Details:**
-
-- Pointer types use pointer equality, not content equality. For C strings, use the dedicated string macros (see next section).
-- When comparing a pointer to `NULL`, prefer `EXPECT_EQ(ptr, nullptr)`.
-
----
-
-## 5. C-String Comparisons
-
-These specifically compare C strings by content, not by pointer.
-
-| Macro              | Purpose                                   |
-|--------------------|-------------------------------------------|
-| `EXPECT_STREQ`     | Verify C strings are equal                |
-| `ASSERT_STREQ`     | Fatal version of `EXPECT_STREQ`           |
-| `EXPECT_STRNE`     | Verify C strings are not equal            |
-| `ASSERT_STRNE`     | Fatal version of `EXPECT_STRNE`           |
-| `EXPECT_STRCASEEQ` | Verify C strings are equal ignoring case |
-| `ASSERT_STRCASEEQ` | Fatal version of `EXPECT_STRCASEEQ`       |
-| `EXPECT_STRCASENE` | Verify C strings differ ignoring case    |
-| `ASSERT_STRCASENE` | Fatal version of `EXPECT_STRCASENE`       |
-
-**Example:**
+You can attach custom failure messages to any assertion by streaming additional information with the `<<` operator, improving failure diagnosability.
 
 ```cpp
-EXPECT_STREQ("hello", "hello");
-ASSERT_STRCASEEQ("FOO", "foo");
+EXPECT_TRUE(is_valid) << "Input validation failed";
+ASSERT_EQ(result, expected) << "Calculation result differs";
 ```
 
-Wide strings (`wchar_t*`) are also supported, being converted to UTF-8 in outputs.
+If the message data is streamable to an `ostream` (including strings and wide strings), it will be included in the failure output.
 
----
+## Explicit Success and Failure Assertions
 
-## 6. Floating-Point Comparisons
+Sometimes, you want to explicitly indicate success or failure in your tests, beyond evaluating expressions.
 
-Due to rounding errors, exact equality is rare. GoogleTest provides specialized macros for approximate comparisons:
+### SUCCEED()
 
-| Macro            | Purpose                                          |
-|------------------|--------------------------------------------------|
-| `EXPECT_FLOAT_EQ` | Verify floats are approximately equal (4 ULPs)  |
-| `ASSERT_FLOAT_EQ` | Fatal version of `EXPECT_FLOAT_EQ`               |
-| `EXPECT_DOUBLE_EQ`| Verify doubles are approximately equal (4 ULPs) |
-| `ASSERT_DOUBLE_EQ`| Fatal version of `EXPECT_DOUBLE_EQ`              |
-| `EXPECT_NEAR`    | Verify difference is within an absolute error   |
-| `ASSERT_NEAR`    | Fatal version of `EXPECT_NEAR`                    |
-
-**Example:**
+- Generates an explicit success event.
+- Does NOT mark the overall test as passed by itself; a test passes only if no assertion fails throughout.
+- Mainly serves as a documentation aid or for future enhancement with visible success messages.
 
 ```cpp
-EXPECT_FLOAT_EQ(3.14f, my_float_value);
-ASSERT_DOUBLE_EQ(3.141592653, my_double_value);
-EXPECT_NEAR(expected, actual, 0.001);
+SUCCEED() << "Checkpoint reached successfully";
 ```
 
----
+### FAIL()
 
-## 7. Exception Assertions
-
-Require exceptions enabled in your build environment.
-
-| Macro             | Purpose                                         |
-|-------------------|-------------------------------------------------| 
-| `EXPECT_THROW`    | Verifies statement throws a specific exception |
-| `ASSERT_THROW`    | Fatal version                                   |
-| `EXPECT_ANY_THROW`| Verifies statement throws any exception         |
-| `ASSERT_ANY_THROW`| Fatal version                                   |
-| `EXPECT_NO_THROW` | Verifies statement does not throw exception    |
-| `ASSERT_NO_THROW` | Fatal version                                   |
-
-**Example:**
+- Generates a fatal failure, aborting the current function.
+- Can only be used in void-returning functions.
 
 ```cpp
-EXPECT_THROW(MyFunc(), std::runtime_error);
-ASSERT_NO_THROW(ClearCache());
-```
-
-Note: The statement can be a compound block surrounded by {}.
-
----
-
-## 8. Predicate Assertions
-
-Enable more complex verification with detailed failure messages.
-
-### EXPECT_PRED* / ASSERT_PRED*
-
-- Invoke a predicate function or functor returning `bool`. Arity: 1 to 5 parameters.
-- Arguments must be streamable to `ostream`.
-
-### EXPECT_PRED_FORMAT* / ASSERT_PRED_FORMAT*
-
-- Invoke a predicate-formatter function returning `testing::AssertionResult`.
-- Allows full customization of failure messages.
-
-**Example predicate function:**
-
-```cpp
-bool IsEven(int n) { return (n % 2) == 0; }
-EXPECT_PRED1(IsEven, value);
-```
-
-**Example predicate-formatter:**
-
-```cpp
-testing::AssertionResult IsEvenFormatted(const char* expr, int n) {
-  if (IsEven(n)) return testing::AssertionSuccess();
-  return testing::AssertionFailure() << expr << " evaluates to " << n << ", which is odd.";
-}
-EXPECT_PRED_FORMAT1(IsEvenFormatted, value);
-```
-
----
-
-## 9. Windows HRESULT Assertions (For Windows only)
-
-| Macro                      | Purpose                        |
-|----------------------------|--------------------------------|
-| `EXPECT_HRESULT_SUCCEEDED` | Verify HRESULT is a success code |
-| `ASSERT_HRESULT_SUCCEEDED` | Fatal version                   |
-| `EXPECT_HRESULT_FAILED`    | Verify HRESULT is failure code  |
-| `ASSERT_HRESULT_FAILED`    | Fatal version                   |
-
-**Example:**
-
-```cpp
-EXPECT_HRESULT_SUCCEEDED(CoInitialize(nullptr));
-ASSERT_HRESULT_FAILED(MyComCall());
-```
-
----
-
-## 10. Death Assertions
-
-Verify that a statement causes the process to terminate.
-
-| Macro                | Purpose                                                    |
-|----------------------|------------------------------------------------------------|
-| `EXPECT_DEATH`       | Asserts statement causes process death with stderr regex  |
-| `ASSERT_DEATH`       | Fatal version                                             |
-| `EXPECT_DEATH_IF_SUPPORTED` | Runs death test if supported else does nothing        |
-| `ASSERT_DEATH_IF_SUPPORTED` | Fatal version of above                                 |
-| `EXPECT_DEBUG_DEATH` | Runs death test in debug mode only                         |
-| `ASSERT_DEBUG_DEATH` | Fatal version                                             |
-| `EXPECT_EXIT`        | Asserts process exits with status, stderr matching regex  |
-| `ASSERT_EXIT`        | Fatal version                                             |
-
-The death test runs the statement in a subprocess. The parent verifies:
-
-- Process exited (non-zero for death tests, or satisfy predicate for exit tests)
-- STDERR matches given regex (or matcher)
-
-**Example:**
-
-```cpp
-EXPECT_DEATH({int x = 0; MyCrashFunc(&x);}, "segmentation fault");
-EXPECT_EXIT(NormalExit(), ::testing::ExitedWithCode(0), "Success");
-```
-
----
-
-## 11. Additional Notes
-
-### Streaming Custom Messages
-
-All assertions allow streaming informative messages using the `<<` operator.
-
-### Use of ASSERT_ vs EXPECT_
-
-Prefer `EXPECT_` unless failure makes further execution meaningless.
-
-### Single-Evaluation of Arguments
-
-Assertions evaluate arguments exactly once to avoid side effects.
-
-### How to Check for Fatal Failures in Subroutines
-
-Use `ASSERT_NO_FATAL_FAILURE(subroutine());` or check `HasFatalFailure()`.
-
-### Skipping Tests at Runtime
-
-Use `GTEST_SKIP() << "reason";` to skip tests dynamically.
-
----
-
-## Code Examples
-
-### Using ASSERT_EQ and EXPECT_EQ
-
-```cpp
-TEST(FactorialTest, HandlesZeroInput) {
-  ASSERT_EQ(Factorial(0), 1) << "Factorial of zero should be 1";
-}
-
-TEST(FactorialTest, HandlesPositiveInput) {
-  for (int i = 1; i <= 5; ++i) {
-    EXPECT_EQ(Factorial(i), ExpectedFactorialValue(i))
-        << "Mismatch at i=" << i;
-  }
+if (unexpected_condition) {
+  FAIL() << "Unexpected error encountered";
 }
 ```
 
-### Using EXPECT_THROW
+### ADD_FAILURE()
+
+- Generates a nonfatal failure, allowing test execution to continue.
 
 ```cpp
-TEST(MyExceptionTest, ThrowsOnInvalidInput) {
-  EXPECT_THROW(MyFunction(-1), std::invalid_argument);
+if (!CheckCondition()) {
+  ADD_FAILURE() << "Condition check failed";
 }
 ```
 
-### Streaming Custom Failure Messages
+### ADD_FAILURE_AT(file, line)
+
+- Allows generating a nonfatal failure at a specified source code location.
 
 ```cpp
-EXPECT_TRUE(IsValidConfig(config)) << "Invalid config: " << config.ToString();
+ADD_FAILURE_AT("foo.cc", 42) << "Issue at foo.cc:42";
 ```
 
-### Using Predicate Assertions
+## Assertions with Matchers: EXPECT_THAT
+
+GoogleTest supports matcher-based assertions that allow expressive and readable checks.
 
 ```cpp
-bool IsPositive(int n) { return n > 0; }
-
-EXPECT_PRED1(IsPositive, value);
+EXPECT_THAT(value, StartsWith("Hello"));
+ASSERT_THAT(numbers, AllOf(HasSize(3), Contains(42)));
 ```
 
-### Using Death Assertions
+Matchers come from GoogleMock's matcher framework, providing rich, English-like syntax and detailed failure diagnostics.
+
+## Boolean Assertions
+
+Use these to verify simple Boolean conditions.
+
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`
+- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`
+
+Example:
 
 ```cpp
-EXPECT_DEATH({ AbortFunction(); }, "Fatal error");
+EXPECT_TRUE(user.IsAuthenticated()) << "User should be authenticated";
+ASSERT_FALSE(pointer == nullptr) << "Pointer must not be null";
 ```
 
-### Scoped Trace to Enhance Failure Context
+## Binary Comparison Assertions
+
+Compare pairs of values using standard relational operators. Arguments are evaluated exactly once.
+
+| Macro       | Description                     |
+| ----------- | -------------------------------|
+| `EXPECT_EQ` / `ASSERT_EQ` | Verifies equality (`val1 == val2`)           |
+| `EXPECT_NE` / `ASSERT_NE` | Verifies inequality (`val1 != val2`)         |
+| `EXPECT_LT` / `ASSERT_LT` | Verifies less than (`val1 < val2`)            |
+| `EXPECT_LE` / `ASSERT_LE` | Verifies less or equal (`val1 <= val2`)       |
+| `EXPECT_GT` / `ASSERT_GT` | Verifies greater than (`val1 > val2`)         |
+| `EXPECT_GE` / `ASSERT_GE` | Verifies greater or equal (`val1 >= val2`)    |
+
+**Important:**
+- For pointer comparisons, `EXPECT_EQ` compares addresses, not pointed-to content.
+- For C strings, use string comparison macros instead to compare by content.
+
+Example:
 
 ```cpp
-void Helper(int index) {
-  SCOPED_TRACE(testing::Message() << "Index: " << index);
-  EXPECT_EQ(Process(index), expected[index]);
+EXPECT_EQ(result.size(), expected.size()) << "Size mismatch";
+ASSERT_LT(index, vector.size()) << "Index out of bounds";
+```
+
+## String Comparison Assertions
+
+Special macros exist for comparing C strings (`const char*`) or wide C strings, taking care of null pointers and content differences:
+
+| Macro            | Description                              |
+| ---------------- | ----------------------------------------|
+| `EXPECT_STREQ` / `ASSERT_STREQ` | Strings are equal (content equality)       |
+| `EXPECT_STRNE` / `ASSERT_STRNE` | Strings are not equal                      |
+| `EXPECT_STRCASEEQ` / `ASSERT_STRCASEEQ` | Strings equal ignoring case                |
+| `EXPECT_STRCASENE` / `ASSERT_STRCASENE` | Strings different ignoring case            |
+
+Example:
+
+```cpp
+EXPECT_STREQ(actual_name, "John Doe") << "Unexpected name";
+ASSERT_STRNE(error_msg, nullptr) << "Error message should not be null";
+```
+
+## Floating-Point Comparisons
+
+Due to rounding errors, floating-point equality checks require special handling. GoogleTest offers floating-point specific assertions:
+
+- `EXPECT_FLOAT_EQ` / `ASSERT_FLOAT_EQ`: Checks approximate equality of `float`s based on Units in the Last Place (ULPs).
+- `EXPECT_DOUBLE_EQ` / `ASSERT_DOUBLE_EQ`: Same for `double`s.
+- `EXPECT_NEAR` / `ASSERT_NEAR(value1, value2, abs_error)`: Verifies values differ by no more than `abs_error`.
+
+Use these macros to avoid false positives in floating-point comparisons.
+
+Example:
+
+```cpp
+EXPECT_FLOAT_EQ(computed_value, expected_value);
+ASSERT_NEAR(measured, reference, 0.001) << "Value not within tolerance";
+```
+
+## Exception Assertions
+
+GoogleTest supports assertions that verify whether code throws exceptions. Exceptions must be enabled in your build.
+
+- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW`: Verifies statement throws the specified exception type.
+- `EXPECT_ANY_THROW` / `ASSERT_ANY_THROW`: Verifies statement throws any exception.
+- `EXPECT_NO_THROW` / `ASSERT_NO_THROW`: Verifies statement does not throw.
+
+Example:
+
+```cpp
+EXPECT_THROW(Divide(1, 0), std::invalid_argument);
+ASSERT_NO_THROW(ProcessInput(data));
+```
+
+## Predicate Assertions
+
+For sophisticated conditions that can't be expressed with built-in assertions, GoogleTest provides predicate assertions that print clearer failure messages with argument values.
+
+- `EXPECT_PRED1(pred, val1)` up to `EXPECT_PRED5` for predicates with multiple arguments.
+- Corresponding `EXPECT_PRED_FORMAT` and `ASSERT_PRED_FORMAT` macros allow customizing failure message formatting with predicate-formatters.
+
+Example:
+
+```cpp
+bool IsPrime(int n) { ... }
+EXPECT_PRED1(IsPrime, 7);
+
+using testing::AssertionResult;
+AssertionResult IsEven(int n) {
+  return (n % 2) == 0 ? testing::AssertionSuccess() : testing::AssertionFailure() << n << " is odd";
 }
-
-TEST(MyTestSuite, ProcessTests) {
-  for (int i = 0; i < 10; ++i) {
-    Helper(i);
-  }
-}
+EXPECT_TRUE(IsEven(value));
 ```
 
-Multiple failures inside `Helper` will output the trace line with index.
+## Windows HRESULT Assertions
+
+On Windows, GoogleTest can assert on `HRESULT` values, interpreting success/failure and reporting system error messages:
+
+- `EXPECT_HRESULT_SUCCEEDED(expr)` / `ASSERT_HRESULT_SUCCEEDED`: Checks HRESULT success.
+- `EXPECT_HRESULT_FAILED(expr)` / `ASSERT_HRESULT_FAILED`: Checks HRESULT failure.
+
+Example:
+
+```cpp
+ASSERT_HRESULT_SUCCEEDED(CoCreateInstance(...));
+EXPECT_HRESULT_FAILED(someFunctionCall());
+```
+
+## Death Assertions
+
+Death assertions verify that code causes the tested process to terminate due to fatal conditions.
+
+- `EXPECT_DEATH(statement, regex)` / `ASSERT_DEATH`: Verifies that `statement` causes process death and outputs stderr matching `regex`.
+- `EXPECT_DEATH_IF_SUPPORTED`, `EXPECT_DEBUG_DEATH`: Variants for platform or build-mode specific death tests.
+- `EXPECT_EXIT(statement, predicate, regex)` / `ASSERT_EXIT`: Verifies process terminates with exit status matching predicate and stderr matching regex.
+
+Example:
+
+```cpp
+ASSERT_DEATH(AbortIfBad(input), "Fatal error on invalid input");
+EXPECT_EXIT(NormalExit(), testing::ExitedWithCode(0), "Success");
+```
+
+### Best Practices for Using Assertions
+
+- Prefer `EXPECT_` over `ASSERT_` when continuation after failure is safe and valuable.
+- Use assertion streaming (`<<`) to add context-specific failure details.
+- For complex conditions, use predicate assertions or matchers with `EXPECT_THAT` to get expressive messages.
+- Use string-specific assertions for C strings to avoid pointer-based comparisons.
+- For floating-point comparisons, always use floating-point assertions to avoid spurious failures due to precision.
+
+### Common Pitfalls
+
+- Using `ASSERT_` in non-void functions causes compile errors due to function return omission.
+- Comparing C strings for content equality with `EXPECT_EQ` checks addresses, not content.
+- Forgetting to call `InitGoogleTest()` before `RUN_ALL_TESTS()` may cause flags to be ignored.
+- Using assertion macros that generate fatal failures in constructors or destructors is disallowed.
+
+### Summary
+
+GoogleTest's suite of assertions empowers you to write robust, clear, and maintainable tests. With built-in assertions for fundamental checks, advanced predicate and matcher assertions for complex validation, and support for exceptions, death tests, and Windows-specific HRESULT checks, you can cover a broad range of test scenarios. Using these effectively will greatly improve your test reliability and developer productivity.
 
 ---
+
+<Info>
+For full API details, see the [Assertions Reference](reference/assertions.md).
+</Info>
+
+<Info>
+To learn advanced usage of predicates and custom failure messages, see [Advanced GoogleTest Topics](advanced.md#predicate-assertions-for-better-error-messages).
+</Info>
+
+<Info>
+See [Writing Your First Tests](guides/getting-started/writing-your-first-tests.mdx) for introductory tutorials using these assertions.
+</Info>
